--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.10.3",
     "web-vitals": "^2.1.4"
   },
